<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.amr.games.pacman</groupId>
	<artifactId>pacman</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>PacMan</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>18</maven.compiler.source>
		<maven.compiler.target>18</maven.compiler.target>
	</properties>
	<description>Pac-Man game implementation based on finite-state machines</description>
	<modules>
		<module>PacManGame</module>
		<module>PacManGameEnhanced</module>
		<module>PacManTests</module>
	</modules>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.4.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<url>https://github.com/armin-reichert/pacman</url>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>